@@ -1,4 +1,5 @@
 5.0.0 -> 5.1a1:
+    - jbj: generailize to verify(*) => -Va and verify(/path) => -Vf /path.
     - jbj: fix: no output performing verify(...) probe.
     - jbj: fix: insure valid exit code for verify(...) probe.
     - jbj: add verify(N) = E:V-R runtime dependency probe. more to do ...
